config: Add a port number
Signed-off-by: Dan Cross <cross@fat-dragon.org>

--- a/config.json5
+++ b/config.json5
@@ -6,6 +6,7 @@
     admin: "Dan Cross <cross@fat-dragon.org>",
     host: "fat-dragon.org",
     port: 22,
+    proto: "ssh",
     //
     // Conferences.
     //
